syntax = "proto3";

option go_package = "github.com/redhat-marketplace/redhat-marketplace-operator/airgap/v2/apis/filesender";
option java_multiple_files = true;
option java_package = "com.redhat.marketplace.airgap.filesender";
option java_outer_classname = "FileSender";

package filesender.v1;

import "apis/model/v1/modelv1.proto";

service FileSender {
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse) {};
  rpc UpdateFileMetadata(UpdateFileMetadataRequest) returns (UpdateFileMetadataResponse) {};
}

// streams a file identified by
message UploadFileRequest {
 oneof data {
    model.v1.FileInfo info = 1;
    bytes chunk_data = 2;
  };
}

message UploadFileResponse {
  model.v1.FileID file_id = 1;
  uint32 size = 2;
}

message UpdateFileMetadataRequest {
  model.v1.FileID file_id = 1;
  map<string,string> metadata = 2;
}

message UpdateFileMetadataResponse {
  model.v1.FileID file_id = 1;
}

